<?xml version="1.0"?>
<package>
  <name>fsc_py_planner</name>
  <version>0.1.0</version>
  <description>fsc_py_planner</description>

  <maintainer email="bnnrgrr@gmail.com">Binnur Gorer</maintainer>

  <license>MIT</license>

  <author email="bnnrgrr@gmail.com">Binnur Gorer</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>convert_positions</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>convert_positions</run_depend>

</package>


